<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/attraction_zoo"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/description_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/description_button" />

        <Button
            android:id="@+id/fees_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/fees_button" />

        <Button
            android:id="@+id/hours_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/hours_button" />

    </LinearLayout>

    <ImageView
        android:id="@+id/attraction_imageview"
        android:contentDescription=""
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="8dp"
        android:src="@drawable/louisville_zoo" />

    <TextView
        android:id="@+id/details_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text=""
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/tickets_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/tickets_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/previous_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="55dp"
            android:text="@string/previous_button" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="55dp"
            android:text="@string/next_button" />


    </LinearLayout>
</LinearLayout>