<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginEnd="150dp"
        android:text="@string/back_button" />

    <TextView
        android:id="@+id/name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/attraction_zoo"
        android:textSize="24sp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/tickets_imageview"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="8dp"
        android:src="@drawable/louisville_zoo" />

    <TextView
        android:id="@+id/fees_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp">

        <EditText
            android:id="@+id/quantity_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_marginEnd="70dp"
            android:text="" />

        <Button
            android:id="@+id/buy_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/buy_button" />


    </LinearLayout>

    <TextView
        android:id="@+id/total_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/total_textview"/>

</LinearLayout>